create page introduce, faq, roadmap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,20 @@
+@import url('http://fonts.cdnfonts.com/css/symtext');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  * {
+    @apply font-body
+  }
+
+  html {
+    @apply scroll-smooth
+  }
+
+  .koala__navbar-left-content {}
+
+  .scrolled {
+    @apply bg-blue-600
+  }
+}
